hphp/test/slow/parser/hh-reserved-name-resource-1.php.expectf
Fatal error: Cannot use `Resource` as a type name as it is reserved in %s on line 3
